--- a/STM32_Neo6M/Debug/makefile
+++ b/STM32_Neo6M/Debug/makefile
@@ -1,5 +1,6 @@
 ################################################################################
 # Automatically-generated file. Do not edit!
+# Toolchain: GNU Tools for STM32 (9-2020-q2-update)
 ################################################################################
 
 -include ../makefile.init
@@ -28,6 +29,12 @@ endif
 
 -include ../makefile.defs
 
+OPTIONAL_TOOL_DEPS := \
+$(wildcard ../makefile.defs) \
+$(wildcard ../makefile.init) \
+$(wildcard ../makefile.targets) \
+
+
 BUILD_ARTIFACT_NAME := STM32_Neo6M
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX := 
@@ -54,22 +61,22 @@ all: main-build
 main-build: STM32_Neo6M.elf secondary-outputs
 
 # Tool invocations
-STM32_Neo6M.elf: $(OBJS) $(USER_OBJS) C:\GHTK\IoT\STM32\STM32-GPS-Neo6M\STM32_Neo6M\STM32F103C8TX_FLASH.ld
-	arm-none-eabi-gcc -o "STM32_Neo6M.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\GHTK\IoT\STM32\STM32-GPS-Neo6M\STM32_Neo6M\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32_Neo6M.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM32_Neo6M.elf: $(OBJS) $(USER_OBJS) D:\Engineering\Lap_trinh\CubeIDE\STM32-GPS-Neo6M\STM32_Neo6M\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "STM32_Neo6M.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\Engineering\Lap_trinh\CubeIDE\STM32-GPS-Neo6M\STM32_Neo6M\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32_Neo6M.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-default.size.stdout: $(EXECUTABLES)
+default.size.stdout: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-size  $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
-STM32_Neo6M.list: $(EXECUTABLES)
+STM32_Neo6M.list: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objdump -h -S $(EXECUTABLES) > "STM32_Neo6M.list"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-STM32_Neo6M.bin: $(EXECUTABLES)
+STM32_Neo6M.bin: $(EXECUTABLES) makefile objects.list $(OPTIONAL_TOOL_DEPS)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "STM32_Neo6M.bin"
 	@echo 'Finished building: $@'
 	@echo ' '
