--- a/STM32_Neo6M/.cproject
+++ b/STM32_Neo6M/.cproject
@@ -143,9 +143,9 @@
                         						
                         <tool id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.602637919.26237751" name="MCU GCC Compiler" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.602637919">
                             							
-                            <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.1828208627" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" useByScannerDiscovery="true" valueType="stringList">
+                            <option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags.1683516483" name="Other flags" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.option.otherflags" useByScannerDiscovery="true" valueType="stringList">
                                 								
-                                <listOptionValue builtIn="false" value="-u_printf_float"/>
+                                <listOptionValue builtIn="false" value="-u _printf_float"/>
                                 							
                             </option>
                             							
@@ -157,7 +157,7 @@
                             							
                             <inputType id="org.eclipse.cdt.managedbuilder.ui.rcbs.inputtype.2012572164" name="Resource Custom Build Step Input Type">
                                 								
-                                <additionalInput kind="additionalinputdependency" paths=""/>
+                                <additionalInput kind="additionalinputdependency"/>
                                 							
                             </inputType>
                             							
@@ -365,6 +365,20 @@
         	
     </storageModule>
     	
-    <storageModule moduleId="refreshScope"/>
+    <storageModule moduleId="refreshScope" versionNumber="2">
+        		
+        <configuration configurationName="Debug">
+            			
+            <resource resourceType="PROJECT" workspacePath="/STM32_Neo6M"/>
+            		
+        </configuration>
+        		
+        <configuration configurationName="Release">
+            			
+            <resource resourceType="PROJECT" workspacePath="/STM32_Neo6M"/>
+            		
+        </configuration>
+        	
+    </storageModule>
     
 </cproject>
